code refactor, bug fixes and more test coverage
Signed-off-by: Rishabh Maurya <rishabhmaurya05@gmail.com>